--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
 	"author": "",
 	"license": "ISC",
 	"description": "",
+	"engines": {
+		"node": ">=22.16.0",
+		"npm": ">=10.0.0"
+	},
 	"dependencies": {
 		"cors": "^2.8.5",
 		"express": "^5.1.0",
